Fix whitespacing

--- a/src/Pages/ContactPage/ContactPage.css
+++ b/src/Pages/ContactPage/ContactPage.css
@@ -1,11 +1,11 @@
 .contact {
-    min-height: 50rem;
+    min-height: 75rem;
     background-color: whitesmoke;
     padding-top: 2.5rem;
 }
 
 .dark-contact {
-    min-height: 50rem;
+    min-height: 75rem;
     background-color: black;
     padding-top: 2.5rem;
 }
@@ -19,6 +19,7 @@
     color: white;
     border: 1px solid black;
     text-align: center;
+    font-size: 1rem;
 }
 
 h3 {
